--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="timer">00:00:00</div>
-    <div id="buttons">
-      <button id="start">Start</button>
-      <button id="stop">Stop</button>
-      <button id="reset">Reset</button>
+    <div class="card">
+      <div id="timer">00:00:00:00</div>
+      <div id="buttons">
+        <button id="start">Start</button>
+        <button id="stop">Stop</button>
+        <button id="reset">Reset</button>
+      </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
